# voicesrt

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.ja.md  README.md  codecov.yml  docker-compose.yml  pyproject.toml  qiita-claude-code-hooks.md  start.sh
.claude/: settings.json
.claude/commands/: quality.md  release.md  self-review.md  test.md
.claude/rules/: pr-workflow.md
.github/workflows/: ci.yml
alembic/versions/: 0f9594c35427_add_model_override_to_jobs.py  2bb750402812_add_glossary_and_refine_mode_to_jobs.py  3decbf6312b0_add_error_detail_to_jobs.py  7a2b5d55730d_add_segments_json_to_jobs.py  80269ea6e01a_add_speakers_and_speaker_map_to_jobs.py
docs/: api.md  architecture.md
src/: config.py  constants.py  database.py  errors.py  main.py  templating.py
src/api/: costs.py  jobs.py  pages.py  settings.py
src/i18n/: en.json  ja.json
src/models/: __init__.py  cost_log.py  job.py  setting.py
src/services/: audio.py  catchphrase.py  cost.py  crypto.py  gemini.py  metadata.py  model_validator.py  quiz.py  refine.py  srt.py  status.py  transcribe.py  utils.py  video_edit.py  whisper.py
src/static/css/: app.css
src/static/js/: job-status.js  model-loader.js
src/static/js/srt-editor/: audio-controller.js  keyboard-shortcuts.js  save-manager.js  segment-editor.js  speaker-manager.js  suggestion-manager.js  time-utils.js  waveform.js
src/templates/: base.html  costs.html  history.html  landing.html  meta_editor.html  settings.html  setup.html  srt_editor.html  upload.html
src/templates/partials/: cost_table.html  job_row.html  job_status.html  metadata_modal.html
tests/: conftest.py  helpers.py  test_api_validation.py  test_audio_split.py  test_cost.py  test_costs_api.py  test_glossary.py  test_i18n.py  test_llm_services.py  test_model_selection.py  test_model_validator.py  test_ollama.py  test_pages.py  test_pipeline.py  test_refine.py  test_refine_helpers.py  test_segment_operations.py  test_settings_api.py  test_srt.py  test_status.py  test_streaming.py  test_utils.py
tests/e2e/: conftest.py  test_smoke.py
